--- a/src/layout/footer/Footer.module.css
+++ b/src/layout/footer/Footer.module.css
@@ -2,6 +2,5 @@
     position: sticky;
     bottom: 0;
     width: 100%;
-    border: 2px solid red;
-    background-color: white;
+    background-color: #f0f5fa;
 }
