--- a/src/layout/header/Header.module.css
+++ b/src/layout/header/Header.module.css
@@ -2,6 +2,5 @@
     position: sticky;
     top: 0;
     width: 100%;
-    border: 2px solid green;
-    background-color: white;
+    background-color: #f0f5fa;
 }
