--- a/src/components/todosComponents/todoList/TodoList.module.css
+++ b/src/components/todosComponents/todoList/TodoList.module.css
@@ -1,6 +1,10 @@
 .todoList {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
+    max-width: 30rem;
+    padding: 1rem;
+    border-radius: 1rem;
     list-style: none;
+    background-color: #f5fafa;
 }
