--- a/src/layout/main/Main.module.css
+++ b/src/layout/main/Main.module.css
@@ -1,4 +1,7 @@
 .main {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     flex: 1;
-    border: 2px solid blue;
+    background-color: #e1e6eb;
 }
