--- a/src/components/customButton/CustomButton.module.css
+++ b/src/components/customButton/CustomButton.module.css
@@ -8,7 +8,11 @@
     font-weight: 600;
     text-decoration: none;
     cursor: pointer;
-    transition: all 0.2s ease-in-out;
+    transition:
+        border-color 0.2s ease-in-out,
+        background-color 0.2s ease-in-out,
+        box-shadow 0.2s ease-in-out,
+        color 0.2s ease-in-out;
 }
 
 .button:hover {
@@ -20,4 +24,14 @@
 
 .button:active {
     box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.5);
+    transform: translate(1px, 1px);
+}
+
+.button:disabled {
+    opacity: 0.7;
+    border-color: #8c8f92;
+    background-color: #ccc;
+    box-shadow: none;
+    color: #666;
+    cursor: not-allowed;
 }
