--- a/src/layout/rootlayout/RootLayout.module.css
+++ b/src/layout/rootlayout/RootLayout.module.css
@@ -2,5 +2,8 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    margin: 0 2rem;
+    margin: 0 auto;
+    padding: 0 2rem;
+    background-color: #f0f4f7;
+    color: #333;
 }
