--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,16 @@
 html {
     font-size: 16px;
     box-sizing: border-box;
+    background-color: #f0f4f7;
+    /* фон всей страницы */
+    color: #333;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 }
 
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 body {
@@ -16,13 +22,33 @@ header,
 main,
 footer {
     padding: 1rem 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-h1, h2, h3,
-h4, h5, h6,
-p, ul, li {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+li {
     margin: 0;
     padding: 0;
+}
+
+button,
+input,
+textarea {
+    font-family: inherit;
+    transition: all 0.3s ease;
+}
+
+input,
+button {
+    margin: 0.25rem 0;
 }
 
 @media (max-width: 600px) {
