--- a/src/components/todosComponents/todoFilter/TodoFilter.module.css
+++ b/src/components/todosComponents/todoFilter/TodoFilter.module.css
@@ -1,5 +1,6 @@
-.todosSelect {
-    padding: 0.75rem 1rem;
-    border: 2px solid #4363ff;
-    border-radius: 0.5rem;
+.todosFilter {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.5rem;
 }
