--- a/src/layout/header/Header.module.css
+++ b/src/layout/header/Header.module.css
@@ -4,6 +4,7 @@
     width: 100%;
     background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(96, 125, 139, 0.1);
+    z-index: 100;
 }
 
 .headerContainer {
