--- a/src/components/UI/loader/Loader.module.css
+++ b/src/components/UI/loader/Loader.module.css
@@ -8,14 +8,22 @@
 .spinner {
     width: 40px;
     height: 40px;
-    border: 5px solid #ccc;
+    border: 5px solid rgba(204, 204, 204, 0.3);
     border-top-color: #4d64a9;
     border-radius: 50%;
     animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
-    to {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    50% {
+        transform: rotate(180deg);
+    }
+
+    100% {
         transform: rotate(360deg);
     }
 }
