--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    width: clamp(280px, 90vw, 400px);
+    width: clamp(17.5rem, 90vw, 25rem);
     margin: 0 auto;
     padding: 2.5rem 1rem;
 }
