--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,6 +51,13 @@ button {
     margin: 0.25rem 0;
 }
 
+.pageTitle {
+    margin-bottom: 1.5rem;
+    font-size: 2rem;
+    font-weight: 600;
+    color: #263238;
+}
+
 @media (max-width: 600px) {
     html {
         font-size: 14px;
