--- a/src/components/UI/avatarUpload/AvatarUpload.module.css
+++ b/src/components/UI/avatarUpload/AvatarUpload.module.css
@@ -2,6 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: background-color 0.2s ease;
+}
+
+.avatarUploader.dragging {
+    outline: 0.125rem dashed #2196f3;
+    outline-offset: 0.25rem;
+    border-radius: 0.75rem;
+    background-color: rgba(33, 150, 243, 0.1);
 }
 
 .previewWrapper {
@@ -9,6 +17,8 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: flex-start;
+    width: 8rem;
+    height: 6rem;
 }
 
 .preview {
@@ -35,6 +45,6 @@
     color: #90a4ae;
 }
 
-.inputFile {
+.fileInput {
     display: none;
 }
