--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -14,6 +14,12 @@
     user-select: none;
 }
 
+@media (max-width: 768px) {
+    .logo {
+        width: 8rem;
+    }
+}
+
 @media (max-width: 500px) {
     .logoImg {
         height: 8rem;
