--- a/src/components/inputField/InputField.module.css
+++ b/src/components/inputField/InputField.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  width: 100%;
 }
 
 .inputField {
@@ -33,4 +34,10 @@
   color: #d32f2f;
   font-size: 0.875rem;
   line-height: 1.2;
+}
+
+@media (max-width: 600px) {
+  .wrapper {
+    width: auto;
+  }
 }
