--- a/src/components/testComponents/resultDisplay/ResultDisplay.module.css
+++ b/src/components/testComponents/resultDisplay/ResultDisplay.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 1.25rem;
-    max-width: 30rem;
+    max-width: 100%;
+    /* max-width: 30rem; */
     margin: 0 auto;
     padding: 2rem;
     background-color: #ffffff;
