--- a/src/pages/test/Test.module.css
+++ b/src/pages/test/Test.module.css
@@ -23,3 +23,17 @@
     justify-content: center;
     margin-top: 2rem;
 }
+
+@media (max-width: 600px) {
+    .testSection {
+        max-width: 305px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .headerRow {
+        flex-direction: column;
+        align-items: stretch;
+        gap: 1rem;
+    }
+}
