style(components): adjust visual details for improved  in AddTaskSidebar, EditProfileForm and InputField modules

--- a/src/components/profileComponents/editProfileForm/EditProfileForm.module.css
+++ b/src/components/profileComponents/editProfileForm/EditProfileForm.module.css
@@ -10,6 +10,11 @@
     text-align: center;
 }
 
+.profileFields {
+    display: flex;
+    flex-direction: column;
+}
+
 .topRow {
     display: flex;
     flex-wrap: wrap;
