--- a/src/layouts/header/Header.module.css
+++ b/src/layouts/header/Header.module.css
@@ -3,6 +3,7 @@
     top: 0;
     width: 100%;
     background-color: #ffffff;
+    border-bottom: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(96, 125, 139, 0.1);
     z-index: 100;
 }
