style(components): adjust visual details for improved in CustomButton, ResultDisplay modules and global.css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,6 +61,12 @@ button {
     html {
         font-size: 14px;
     }
+
+    header,
+    main,
+    footer {
+        margin: 0;
+    }
 }
 
 @keyframes fadeInUp {
